// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include dynamic folders on the one hand and fixed ones at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 1049.9090833947007,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 1049.9090833947007,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 290.7031779482708,
      "y": 4,
      "z": -84.63931936533464,
    },
    "isLeaf": false,
    "length": 577.4499958670854,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "src",
    "outgoingEdgePoint": Vector3 {
      "x": 290.7031779482708,
      "y": 4,
      "z": 204.08567856820804,
    },
    "path": "/root/src",
    "visible": true,
    "width": 367.4681791881452,
    "x0": 356.9690883541982,
    "y0": 20.998181667894013,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 224.60741634512254,
      "y": 6,
      "z": -128.96303892008893,
    },
    "isLeaf": false,
    "length": 316.3009928356862,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "main",
    "outgoingEdgePoint": Vector3 {
      "x": 224.60741634512254,
      "y": 6,
      "z": 29.187457497754167,
    },
    "path": "/root/src/main",
    "visible": true,
    "width": 208.59579808699993,
    "x0": 370.3095173016226,
    "y0": 41.96171287098952,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 172.45846682337256,
      "y": 6,
      "z": 228.35544162082758,
    },
    "isLeaf": false,
    "length": 198.25840942211272,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "test",
    "outgoingEdgePoint": Vector3 {
      "x": 276.75636586687256,
      "y": 6,
      "z": 228.35544162082758,
    },
    "path": "/root/src/test",
    "visible": true,
    "width": 208.59579808699993,
    "x0": 370.3095173016226,
    "y0": 379.2262369097712,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 173.6712330913203,
      "y": 506,
      "z": -155.398456022615,
    },
    "isLeaf": true,
    "length": 126.70519961319982,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file1.java",
    "outgoingEdgePoint": Vector3 {
      "x": 173.6712330913203,
      "y": 506,
      "z": -92.0458562160151,
    },
    "path": "/root/src/main/file1.java",
    "visible": true,
    "width": 80.04257368454648,
    "x0": 383.64994624904705,
    "y0": 62.925244074085036,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 173.6712330913203,
      "y": 506,
      "z": -7.729725206319635,
    },
    "isLeaf": true,
    "length": 126.70519961319988,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file2.java",
    "outgoingEdgePoint": Vector3 {
      "x": 173.6712330913203,
      "y": 506,
      "z": 55.62287460028031,
    },
    "path": "/root/src/main/file2.java",
    "visible": true,
    "width": 80.04257368454648,
    "x0": 383.64994624904705,
    "y0": 210.5939748903804,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 65,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 173.6712330913203,
      "y": 506,
      "z": 189.27260486684716,
    },
    "isLeaf": true,
    "length": 156.33134701592155,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "otherFile.java",
    "outgoingEdgePoint": Vector3 {
      "x": 173.6712330913203,
      "y": 506,
      "z": 267.43827837480796,
    },
    "path": "/root/src/test/otherFile.java",
    "visible": true,
    "width": 80.04257368454648,
    "x0": 383.64994624904705,
    "y0": 400.1897681128668,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 91.2204521032777,
      "y": 4,
      "z": 537.4318125460254,
    },
    "isLeaf": false,
    "length": 314.9727250184102,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "resources",
    "outgoingEdgePoint": Vector3 {
      "x": 353.69772295195287,
      "y": 4,
      "z": 537.4318125460254,
    },
    "path": "/root/resources",
    "visible": true,
    "width": 524.9545416973502,
    "x0": 209.98181667894013,
    "y0": 629.9454500368204,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -3.271365402245351,
      "y": 6,
      "z": 417.7421770390296,
    },
    "isLeaf": false,
    "length": 62.99454500368199,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "textFiles",
    "outgoingEdgePoint": Vector3 {
      "x": 49.22408876748966,
      "y": 6,
      "z": 417.7421770390296,
    },
    "path": "/root/resources/textFiles",
    "visible": true,
    "width": 104.99090833947002,
    "x0": 220.48090751288714,
    "y0": 636.2449045371886,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 5,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 4.1720198904782535,
      "y": 506,
      "z": 404.81419205693066,
    },
    "isLeaf": true,
    "length": 51.711939928395736,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "file.txt",
    "outgoingEdgePoint": Vector3 {
      "x": 4.1720198904782535,
      "y": 506,
      "z": 430.6701620211286,
    },
    "path": "/root/resources/textFiles/file.txt",
    "visible": true,
    "width": 48.57788296303835,
    "x0": 229.88307840895908,
    "y0": 641.8862070748318,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 295.95272336524425,
      "y": 6,
      "z": 619.3247210508121,
    },
    "isLeaf": false,
    "length": 151.1869080088369,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "tables",
    "outgoingEdgePoint": Vector3 {
      "x": 421.94181337260835,
      "y": 6,
      "z": 619.3247210508121,
    },
    "path": "/root/resources/tables",
    "visible": true,
    "width": 251.9781800147282,
    "x0": 482.9581783615622,
    "y0": 793.7312670463937,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 259.37524562117085,
      "y": 506,
      "z": 569.8232011704994,
    },
    "isLeaf": true,
    "length": 32.675880118039004,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table1.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 279.6960665901006,
      "y": 506,
      "z": 569.8232011704994,
    },
    "path": "/root/resources/tables/table1.xlsx",
    "visible": true,
    "width": 40.64164193785939,
    "x0": 499.21483513670603,
    "y0": 803.4852611114799,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 316.27354433417395,
      "y": 506,
      "z": 569.8232011704994,
    },
    "isLeaf": true,
    "length": 32.675880118039004,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table2.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 336.5943653031037,
      "y": 506,
      "z": 569.8232011704994,
    },
    "path": "/root/resources/tables/table2.xlsx",
    "visible": true,
    "width": 40.64164193785939,
    "x0": 556.1131338497091,
    "y0": 803.4852611114799,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 373.17184304717705,
      "y": 506,
      "z": 569.8232011704994,
    },
    "isLeaf": true,
    "length": 32.675880118039004,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table3.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 393.4926640161068,
      "y": 506,
      "z": 569.8232011704994,
    },
    "path": "/root/resources/tables/table3.xlsx",
    "visible": true,
    "width": 40.64164193785939,
    "x0": 613.0114325627122,
    "y0": 803.4852611114799,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 263.4394098149568,
      "y": 506,
      "z": 607.5386448888329,
    },
    "isLeaf": true,
    "length": 23.247019188455624,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table4.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 291.8885591714584,
      "y": 506,
      "z": 607.5386448888329,
    },
    "path": "/root/resources/tables/table4.xlsx",
    "visible": true,
    "width": 56.8982987130031,
    "x0": 499.21483513670603,
    "y0": 845.9151352946051,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 263.4394098149568,
      "y": 506,
      "z": 640.5396581423747,
    },
    "isLeaf": true,
    "length": 23.247019188455624,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table5.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 291.8885591714584,
      "y": 506,
      "z": 640.5396581423747,
    },
    "path": "/root/resources/tables/table5.xlsx",
    "visible": true,
    "width": 56.8982987130031,
    "x0": 499.21483513670603,
    "y0": 878.9161485481469,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 263.4394098149568,
      "y": 506,
      "z": 673.5406713959165,
    },
    "isLeaf": true,
    "length": 23.247019188455624,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table6.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 291.8885591714584,
      "y": 506,
      "z": 673.5406713959165,
    },
    "path": "/root/resources/tables/table6.xlsx",
    "visible": true,
    "width": 56.8982987130031,
    "x0": 499.21483513670603,
    "y0": 911.9171618016887,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 338.6264473999966,
      "y": 506,
      "z": 605.8520167484116,
    },
    "isLeaf": true,
    "length": 39.74752581522648,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table7.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 338.6264473999966,
      "y": 506,
      "z": 625.725779656025,
    },
    "path": "/root/resources/tables/table7.xlsx",
    "visible": true,
    "width": 32.513313550287535,
    "x0": 572.3697906248528,
    "y0": 845.9151352946051,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 387.39641772542785,
      "y": 506,
      "z": 605.8520167484116,
    },
    "isLeaf": true,
    "length": 39.74752581522648,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table8.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 387.39641772542785,
      "y": 506,
      "z": 625.725779656025,
    },
    "path": "/root/resources/tables/table8.xlsx",
    "visible": true,
    "width": 32.513313550287535,
    "x0": 621.1397609502841,
    "y0": 845.9151352946051,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 342.69061159378253,
      "y": 506,
      "z": 652.915038112453,
    },
    "isLeaf": true,
    "length": 14.996765875070082,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table9.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 383.3322535316419,
      "y": 506,
      "z": 652.915038112453,
    },
    "path": "/root/resources/tables/table9.xlsx",
    "visible": true,
    "width": 81.28328387571878,
    "x0": 572.3697906248528,
    "y0": 895.4166551749179,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 342.69061159378253,
      "y": 506,
      "z": 677.6657980526093,
    },
    "isLeaf": true,
    "length": 14.996765875070196,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table10.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 383.3322535316419,
      "y": 506,
      "z": 677.6657980526093,
    },
    "path": "/root/resources/tables/table10.xlsx",
    "visible": true,
    "width": 81.28328387571878,
    "x0": 572.3697906248528,
    "y0": 920.1674151150742,
    "z0": 6,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include fixed folders on the one hand and a file at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 839.4112549695428,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 839.4112549695428,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 1.8233764908628416,
      "y": 4,
      "z": -40.14718625761431,
    },
    "isLeaf": false,
    "length": 503.6467529817257,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 1.8233764908628416,
      "y": 4,
      "z": 211.67619023324852,
    },
    "path": "/root/folder_1_red",
    "visible": true,
    "width": 335.76450198781714,
    "x0": 83.94112549695429,
    "y0": 83.94112549695429,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -65.32952390670056,
      "y": 6,
      "z": 10.217489040558263,
    },
    "isLeaf": false,
    "length": 251.8233764908628,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 68.9762768884263,
      "y": 6,
      "z": 10.217489040558263,
    },
    "path": "/root/folder_1_red/folder_1.1_red",
    "visible": true,
    "width": 268.6116015902537,
    "x0": 117.517575695736,
    "y0": 134.30580079512686,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -44.060455809251664,
      "y": 506,
      "z": -41.98433188681811,
    },
    "isLeaf": true,
    "length": 208.8072837095055,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.1.file",
    "outgoingEdgePoint": Vector3 {
      "x": -44.060455809251664,
      "y": 506,
      "z": 62.41930996793462,
    },
    "path": "/root/folder_1_red/folder_1.1_red/red_child_1.1.file",
    "visible": true,
    "width": 130.96010468991017,
    "x0": 140.45949184579325,
    "y0": 155.8138471858055,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 119.34095218659883,
      "y": 6,
      "z": 199.08502140870542,
    },
    "isLeaf": false,
    "length": 50.364675298172585,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.2_red",
    "outgoingEdgePoint": Vector3 {
      "x": 119.34095218659883,
      "y": 6,
      "z": 224.26735905779168,
    },
    "path": "/root/folder_1_red/folder_1.2_red",
    "visible": true,
    "width": 33.576450198781686,
    "x0": 352.552727087208,
    "y0": 436.49385258416225,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 113.39383185618732,
      "y": 506,
      "z": 201.3151915326097,
    },
    "isLeaf": true,
    "length": 41.44399480255527,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.2.file",
    "outgoingEdgePoint": Vector3 {
      "x": 113.39383185618732,
      "y": 506,
      "z": 222.03718893388734,
    },
    "path": "/root/folder_1_red/folder_1.2_red/red_child_1.2.file",
    "visible": true,
    "width": 15.735089207547162,
    "x0": 355.52628725241374,
    "y0": 440.9541928319709,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -61.13246763185286,
      "y": 4,
      "z": 463.49956672411145,
    },
    "isLeaf": false,
    "length": 83.94112549695433,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_2_orange",
    "outgoingEdgePoint": Vector3 {
      "x": 148.7203461105329,
      "y": 4,
      "z": 463.49956672411145,
    },
    "path": "/root/folder_2_orange",
    "visible": true,
    "width": 419.70562748477147,
    "x0": 83.94112549695429,
    "y0": 671.5290039756343,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "rloc": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -275.98177693953346,
      "y": 502,
      "z": 458.50307115881657,
    },
    "isLeaf": true,
    "length": 19.985982261179515,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "orange.file",
    "outgoingEdgePoint": Vector3 {
      "x": -275.98177693953346,
      "y": 502,
      "z": 468.4960622894063,
    },
    "path": "/root/folder_2_orange7orange.file",
    "visible": true,
    "width": 0,
    "x0": -25.981776939533468,
    "y0": 703.5065755935217,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes only root node 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 839.4112549695428,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 839.4112549695428,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 1.8233764908628416,
      "y": 4,
      "z": -40.14718625761431,
    },
    "isLeaf": false,
    "length": 503.6467529817257,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 1.8233764908628416,
      "y": 4,
      "z": 211.67619023324852,
    },
    "path": "/root/folder_1_red",
    "visible": true,
    "width": 335.76450198781714,
    "x0": 83.94112549695429,
    "y0": 83.94112549695429,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -65.32952390670056,
      "y": 6,
      "z": 10.217489040558263,
    },
    "isLeaf": false,
    "length": 251.8233764908628,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 68.9762768884263,
      "y": 6,
      "z": 10.217489040558263,
    },
    "path": "/root/folder_1_red/folder_1.1_red",
    "visible": true,
    "width": 268.6116015902537,
    "x0": 117.517575695736,
    "y0": 134.30580079512686,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -44.060455809251664,
      "y": 506,
      "z": -41.98433188681811,
    },
    "isLeaf": true,
    "length": 208.8072837095055,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.1.file",
    "outgoingEdgePoint": Vector3 {
      "x": -44.060455809251664,
      "y": 506,
      "z": 62.41930996793462,
    },
    "path": "/root/folder_1_red/folder_1.1_red/red_child_1.1.file",
    "visible": true,
    "width": 130.96010468991017,
    "x0": 140.45949184579325,
    "y0": 155.8138471858055,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 119.34095218659883,
      "y": 6,
      "z": 199.08502140870542,
    },
    "isLeaf": false,
    "length": 50.364675298172585,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.2_red",
    "outgoingEdgePoint": Vector3 {
      "x": 119.34095218659883,
      "y": 6,
      "z": 224.26735905779168,
    },
    "path": "/root/folder_1_red/folder_1.2_red",
    "visible": true,
    "width": 33.576450198781686,
    "x0": 352.552727087208,
    "y0": 436.49385258416225,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 113.39383185618732,
      "y": 506,
      "z": 201.3151915326097,
    },
    "isLeaf": true,
    "length": 41.44399480255527,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.2.file",
    "outgoingEdgePoint": Vector3 {
      "x": 113.39383185618732,
      "y": 506,
      "z": 222.03718893388734,
    },
    "path": "/root/folder_1_red/folder_1.2_red/red_child_1.2.file",
    "visible": true,
    "width": 15.735089207547162,
    "x0": 355.52628725241374,
    "y0": 440.9541928319709,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -61.13246763185286,
      "y": 4,
      "z": 463.49956672411145,
    },
    "isLeaf": false,
    "length": 83.94112549695433,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_2_orange",
    "outgoingEdgePoint": Vector3 {
      "x": 148.7203461105329,
      "y": 4,
      "z": 463.49956672411145,
    },
    "path": "/root/folder_2_orange",
    "visible": true,
    "width": 419.70562748477147,
    "x0": 83.94112549695429,
    "y0": 671.5290039756343,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "rloc": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -275.98177693953346,
      "y": 502,
      "z": 458.50307115881657,
    },
    "isLeaf": true,
    "length": 19.985982261179515,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "orange.file",
    "outgoingEdgePoint": Vector3 {
      "x": -275.98177693953346,
      "y": 502,
      "z": 468.4960622894063,
    },
    "path": "/root/folder_2_orange7orange.file",
    "visible": true,
    "width": 0,
    "x0": -25.981776939533468,
    "y0": 703.5065755935217,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -76,
      "y": 2,
      "z": -163,
    },
    "isLeaf": false,
    "length": 348,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -76,
      "y": 2,
      "z": 11,
    },
    "path": "/root",
    "visible": true,
    "width": 348,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -124,
      "y": 4,
      "z": -151,
    },
    "isLeaf": true,
    "length": 300,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -124,
      "y": 4,
      "z": -1,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 204,
    "x0": 24,
    "y0": 24,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -175,
      "y": 502,
      "z": 86,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -73,
      "y": 502,
      "z": 86,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 204,
    "x0": 24,
    "y0": 336,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children and some grand children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -69,
      "y": 2,
      "z": -159.5,
    },
    "isLeaf": false,
    "length": 362,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -69,
      "y": 2,
      "z": 21.5,
    },
    "path": "/root",
    "visible": true,
    "width": 362,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -193.36484098939928,
      "y": 4,
      "z": -151.5,
    },
    "isLeaf": true,
    "length": 330,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -193.36484098939928,
      "y": 4,
      "z": 13.5,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 81.2703180212014,
    "x0": 16,
    "y0": 16,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -72.3648409893993,
      "y": 4,
      "z": -151.5,
    },
    "isLeaf": false,
    "length": 330,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -72.3648409893993,
      "y": 4,
      "z": 13.5,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 128.7296819787986,
    "x0": 113.2703180212014,
    "y0": 16,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "functions": 100,
      "mcc": 100,
      "rloc": 30,
    },
    "color": "#820E0E",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -111.8648409893993,
      "y": 6,
      "z": -198.4615952732644,
    },
    "isLeaf": true,
    "length": 78.1536189069424,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -111.8648409893993,
      "y": 6,
      "z": -159.3847858197932,
    },
    "path": "/root/Parent Leaf/small leaf",
    "visible": true,
    "width": 17.729681978798595,
    "x0": 129.2703180212014,
    "y0": 32,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "functions": 1000,
      "mcc": 10,
      "rloc": 70,
    },
    "color": "#6caf3e",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -111.8648409893993,
      "y": 6,
      "z": -72.8847858197932,
    },
    "isLeaf": true,
    "length": 203.8463810930576,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "other small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -111.8648409893993,
      "y": 6,
      "z": 29.038404726735592,
    },
    "path": "/root/Parent Leaf/other small leaf",
    "visible": true,
    "width": 17.729681978798595,
    "x0": 129.2703180212014,
    "y0": 126.1536189069424,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -116.29726148409895,
      "y": 504,
      "z": 88,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "empty folder",
    "outgoingEdgePoint": Vector3 {
      "x": -107.43242049469964,
      "y": 504,
      "z": 88,
    },
    "path": "/root/Parent Leaf/empty folder",
    "visible": true,
    "width": 17.729681978798595,
    "x0": 129.2703180212014,
    "y0": 338,
    "z0": 4,
  },
]
`;
